removing height properties on sections so that height is dynamic and doesn't cause overflow issues

--- a/client/src/Components/About/About.css
+++ b/client/src/Components/About/About.css
@@ -1,8 +1,6 @@
 .section-About{
-    /* background-color: #171233; */
-    background-color:white;
-    height: 60vh;
-}
+        background-color:white;
+    }
 
 .aboutTitle{
     color: #2f2855;
@@ -75,7 +73,7 @@
 
 @media all and (max-width:768px){
     .section-About{
-        height: 100vh;
+        /* height: 100vh; */
     }
     .aboutContainer{
         flex-direction: column;
@@ -93,7 +91,6 @@
         grid-template-columns: repeat(2, 1fr);
         font-size: 1rem;        
     }
-
 
 
     }/*closes media query for mobile*/
