--- a/client/src/Components/Portfolio/Portfolio.css
+++ b/client/src/Components/Portfolio/Portfolio.css
@@ -1,6 +1,5 @@
 .section-Portfolio{
-    background-color: #29224C;
-    height: 150vh;
+    background-color: #29224C;    
     width: 100vw;
 }
 
